--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+      "start": "electron ."
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -14,7 +14,9 @@
     "openai": "^4.89.0",
     "puppeteer-extra": "^3.3.6",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.0",
+    "electron": "^latest-version",
+    "qrcode": "^1.5.1"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,8 @@
     "url": "https://github.com/Iteranya/wajs/issues"
   },
   "homepage": "https://github.com/Iteranya/wajs#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "electron": "^35.0.3"
+  }
 }
