--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-      "start": "electron ."
-    },
+    "start": "electron ."
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -13,10 +13,9 @@
     "figlet": "^1.8.0",
     "openai": "^4.89.0",
     "puppeteer-extra": "^3.3.6",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0",
-    "electron": "^latest-version",
-    "qrcode": "^1.5.1"
+    "whatsapp-web.js": "^1.26.0"
   },
   "repository": {
     "type": "git",
