--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/Iteranya/wajs/issues"
   },
   "homepage": "https://github.com/Iteranya/wajs#readme",
-  "description": "",
+  "description": "Humu",
   "devDependencies": {
     "electron": "^35.0.3"
   }
